2011-08-07  Robert Larice
 * src/frontend/shyu.c :
   fix a `strict-aliasing' warning
     warning: dereferencing pointer 'current' does break strict-aliasing rules
   FIXME, this code is, and was broken.
     in if_sens_run() error messages are generated, and then ignored.

2011-08-07  Robert Larice
 * configure.ac :
   use -O1 when debugging, otherwise gcc ignores -Wuninitialized
   this is temporary, and certainly will confuse users of gdb
   obviously somewhere around gcc version 4.4 the necessity to have
     enable optimization for detecting uninitialized variables was dropped.
     stable Debian's gcc is a 4.4 and still needs -O1 ...

2011-08-06  Dietmar Warning
 * bsim4v4/b4v4set.c: fix missing model parameter defaults
 * b4check.c, b4v4check.c, b4v5check.c: add "4.x" as a short form for version

2011-08-06  Robert Larice
 * src/frontend/shyu.c :
   fix use of possibly uninitialized variables, return on error

2011-08-06  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml :
   reposition NG_IGNOREABLE for non C99 compiler compatibility

2011-08-06  Robert Larice
 * src/maths/cmaths/Makefile.am ,
 * src/maths/cmaths/cmath1.c ,
 * src/maths/cmaths/test_cx_cph.c :
   cph(vec), rewrite, cleanup, and add missing test_cx_cph.c

2011-08-06  Holger Vogt
 * fteext.h, cmaths/makefile.am, cmath1.c, cmath1.h, parse.c:
   function cph(vec) delivers phase from a vector without jumps at +-PI

2011-08-06  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/resource.c :
   complete `replace size_t by unsigned long long'

2011-08-06  Robert Larice
 * src/frontend/shyu.c :
   bug fix, tranJob was used instead of pssJob

2011-08-06  Robert Larice
 * src/winmain.c :
   another type fix for Visual Studio, QUIT_BUTTON_ID

2011-08-06  Robert Larice
 * src/spicelib/devices/dev.c :
  fix broken commit `type fix for Visual Studio'

2011-08-06  Holger Vogt
 * inpcom.c: code beautify, bug no. 3386184